Se commitean cosas añadidas y cambios, se añadieron estadisticas en el crud de administración de empresas, y tambien se arreglo lo del token, tambien estadisticas generales etc